--- a/assignment-3/css/style.css
+++ b/assignment-3/css/style.css
@@ -3,7 +3,9 @@
     -webkit-user-select: none;
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
-    color: #333;
+    color: #f59517;
+    text-shadow: -1px -1px 0 rgb(39, 39, 39), 1px -1px 0 rgb(39, 39, 39), 1px 1px 0 rgb(39, 39, 39),
+    1px 1px 0 rgb(39, 39, 39);
 }
 
 input {
