--- a/week-2/reload/css/style.css
+++ b/week-2/reload/css/style.css
@@ -29,6 +29,22 @@ input::-webkit-inner-spin-button {
     cursor: default;
 }
 
-.all {
-    width: 38px;
-}
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #ce9142;
+    color: rgb(199, 199, 199);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  button:hover {
+    background-color: #b37e39;
+  }
+  
+  button:active {
+    background-color: #815c2b;
+  }
+  
