--- a/week-2/reload/css/style.css
+++ b/week-2/reload/css/style.css
@@ -13,6 +13,13 @@ input {
     cursor: default;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+    cursor: default;
+}
+
 .all {
     width: 38px;
 }
