--- a/week-2/gamegroup/css/style.css
+++ b/week-2/gamegroup/css/style.css
@@ -14,14 +14,12 @@ input {
     width: 15px;
     cursor: default;
 }
-
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
     cursor: default;
 }
-
 .all {
     width: 38px;
 }
@@ -38,11 +36,9 @@ button {
     text-shadow: -1px -1px 0 rgb(39, 39, 39), 1px -1px 0 rgb(39, 39, 39), 1px 1px 0 rgb(39, 39, 39), 1px 1px 0 rgb(39, 39, 39);
     transition: background-color 0.3s;
 }
-
 button:hover {
     background-color: #d37814;
 }
-
 button:active {
     background-color: #b26512;
 }
@@ -56,4 +52,33 @@ button:active {
     top: 10px;
     left: 10px;
     z-index: 4;
+}
+
+/* Timer display styles */
+.timerDisplay {
+    font-family: 'Western', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 24px;
+    color: #f59517;
+    position: fixed;
+    top: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 4;
+}
+
+/* New button styles for consistency */
+button.start, button.restart {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+}
+
+button.fire, button.reload {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 3;
 }
